z-index fix

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 11;
+    z-index: 12;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.7);
