--- a/styles/top.css
+++ b/styles/top.css
@@ -9,7 +9,7 @@ header {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    z-index: 10;
+    z-index: 11;
 }
 
 /* Nav bar */
